# Copyright (c) 2012 Samsung Electronics Co., Ltd All Rights Reserved
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.
#
# @file        CMakeLists.txt
# @author      Marcin Kaminski (marcin.ka@samsung.com)
# @author      Karol Pawlowski (k.pawlowski@samsung.com)
# @version     1.0
# @brief
#

SET(LOCALIZATION_TESTS_DIR ${CMAKE_CURRENT_SOURCE_DIR})

PKG_CHECK_MODULES(TEST_PKGS
    vconf
    REQUIRED
    )

WRT_INCLUDE_DIRECTORIES(
    ${TEST_PKGS_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/modules/localization/include
    )

WRT_LINK_DIRECTORIES(${TEST_PKGS_LIBRARY_DIRS})
WRT_TARGET_LINK_LIBRARIES(${TEST_PKGS_LIBRARIES})

FILE(GLOB LOCALIZATION_TESTS_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*testcases.cpp")

SET(TARGET_LOCALIZATION_TEST "wrt-commons-tests-localization")
WRT_TEST_BUILD(${TARGET_LOCALIZATION_TEST} ${LOCALIZATION_TESTS_SOURCES} tests_miscunit.cpp)
WRT_TEST_INSTALL(${TARGET_LOCALIZATION_TEST})

